# JCT

./: .gitignore  CMakeLists.txt  binanceclient.cpp  binanceclient.h  candlechartwidget.cpp  candlechartwidget.h  candledata.h  config.cpp  config.h  main.cpp  overlaywidget.cpp  overlaywidget.h  windowpainter.cpp  windowpainter.h
release/: config.ini
